--- a/admin-login.html
+++ b/admin-login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Station Control | ADMIN PORTAL</title>
+    <title>Officer Access | CK Travels Nautical Command</title>
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -13,152 +13,126 @@
 
     <style>
         .glass-panel {
-            background: rgba(15, 23, 42, 0.4);
-            backdrop-filter: blur(40px);
-            -webkit-backdrop-filter: blur(40px);
+            background: rgba(255, 255, 255, 0.03);
+            backdrop-filter: blur(25px);
             border: 1px solid rgba(255, 255, 255, 0.05);
-            box-shadow: 0 100px 150px -50px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 50px 100px -20px rgba(0, 0, 0, 0.6);
         }
 
         .input-dark {
-            background: rgba(2, 6, 23, 0.6);
-            border: 1px solid rgba(255, 255, 255, 0.05);
-            transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+            background: rgba(255, 255, 255, 0.02);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: white;
+            transition: all 0.3s ease;
         }
 
         .input-dark:focus {
-            background: rgba(2, 6, 23, 0.9);
-            border-color: #1e40af;
-            box-shadow: 0 0 30px rgba(30, 64, 175, 0.2);
+            border-color: #FF6B00;
+            background: rgba(255, 255, 255, 0.05);
+            outline: none;
+            box-shadow: 0 0 20px rgba(255, 107, 0, 0.2);
         }
 
-        /* Thematic Gradients */
-        .bg-matrix {
-            position: fixed;
-            inset: 0;
-            z-index: -1;
-            background: radial-gradient(circle at 100% 0%, #1e3a8a 0%, transparent 40%),
-                radial-gradient(circle at 0% 100%, #1e1b4b 0%, transparent 40%),
-                #020617;
+        .btn-orange {
+            background: #FF6B00;
+            color: white;
+            transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
         }
 
-        .vertical-text {
-            writing-mode: vertical-rl;
-            transform: rotate(180deg);
+        .btn-orange:hover {
+            transform: scale(1.02);
+            box-shadow: 0 0 30px rgba(255, 107, 0, 0.4);
+        }
+
+        /* Thematic Background */
+        .bg-nautical {
+            background: radial-gradient(circle at 50% 50%, #00143D 0%, #000000 100%);
+        }
+
+        .radar-scan {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 400px;
+            height: 400px;
+            background: conic-gradient(from 0deg, rgba(255, 107, 0, 0) 0%, rgba(255, 107, 0, 0.1) 100%);
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+            animation: radar 4s linear infinite;
+        }
+
+        @keyframes radar {
+            0% {
+                transform: translate(-50%, -50%) rotate(0deg);
+            }
+
+            100% {
+                transform: translate(-50%, -50%) rotate(360deg);
+            }
         }
     </style>
 </head>
 
 <body
-    class="bg-dark font-sans text-slate-200 antialiased h-screen flex items-center justify-center p-6 relative overflow-hidden">
+    class="bg-nautical h-screen w-full flex items-center justify-center overflow-hidden font-sans antialiased text-white">
 
-    <div class="bg-matrix"></div>
+    <div class="radar-scan"></div>
 
-    <div class="w-full max-w-[480px] relative z-10" id="login-container">
-        <!-- Logo Area -->
-        <div class="text-center mb-16" id="logo-section">
-            <div
-                class="inline-flex items-center justify-center w-24 h-24 bg-brand/10 border border-brand/30 rounded-[32px] mb-10 shadow-2xl shadow-brand/20">
-                <svg class="w-12 h-12 text-brand" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
-                        d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" />
-                </svg>
-            </div>
-            <h1 class="text-4xl font-extrabold tracking-tighter text-white uppercase italic">Station <span
-                    class="not-italic text-brand">Control.</span></h1>
-            <p class="text-slate-500 font-bold mt-4 text-[10px] tracking-[0.4em] uppercase opacity-60">Administrative
-                Node Tier-A</p>
-        </div>
-
-        <!-- Login Panel -->
-        <div class="glass-panel rounded-[64px] p-12 md:p-16 border-white/5 relative overflow-hidden" id="login-card">
-            <div
-                class="absolute top-0 left-0 w-full h-[1px] bg-gradient-to-r from-transparent via-brand/50 to-transparent">
+    <div class="relative z-10 w-full max-w-lg px-8">
+        <div class="glass-panel p-16 rounded-[48px] space-y-12 reveal-up opacity-0">
+            <div class="text-center space-y-4">
+                <span class="text-[10px] font-black tracking-[0.6em] text-orange-500 uppercase">Secure Command
+                    Interface</span>
+                <h1 class="text-4xl font-black italic tracking-tighter">Officer <span
+                        class="not-italic text-slate-500">Access_</span></h1>
             </div>
 
-            <form id="adminForm" class="space-y-10">
-                <div class="space-y-3">
-                    <label class="text-[10px] font-bold text-slate-500 uppercase tracking-[0.3em] ml-6">Digital
-                        Signature</label>
-                    <input type="text" id="adminId" required placeholder="ADM-778"
-                        class="w-full input-dark rounded-[32px] px-10 py-6 focus:outline-none font-mono text-brand placeholder-slate-800 text-lg">
-                </div>
-
-                <div class="space-y-3">
-                    <label class="text-[10px] font-bold text-slate-500 uppercase tracking-[0.3em] ml-6">Access
-                        Key</label>
-                    <input type="password" id="adminPass" required placeholder="••••••••"
-                        class="w-full input-dark rounded-[32px] px-10 py-6 focus:outline-none font-mono text-brand placeholder-slate-800 text-lg">
+            <form class="space-y-8" onsubmit="handleLogin(event)">
+                <div class="space-y-6">
+                    <div class="space-y-2">
+                        <label class="text-[9px] font-black text-slate-500 uppercase tracking-widest ml-4">Station
+                            ID</label>
+                        <input type="text" placeholder="STN-2026-X"
+                            class="w-full px-8 py-5 rounded-2xl input-dark font-mono text-sm uppercase tracking-widest placeholder:opacity-30">
+                    </div>
+                    <div class="space-y-2">
+                        <label class="text-[9px] font-black text-slate-500 uppercase tracking-widest ml-4">Access
+                            Protocol</label>
+                        <input type="password" placeholder="••••••••"
+                            class="w-full px-8 py-5 rounded-2xl input-dark font-mono text-sm tracking-widest placeholder:opacity-30">
+                    </div>
                 </div>
 
                 <div class="pt-6">
-                    <button type="submit" id="auth-btn"
-                        class="w-full bg-brand hover:bg-blue-600 text-white font-bold py-7 rounded-[32px] shadow-2xl shadow-brand/30 transition-all active:scale-[0.98] tracking-[0.3em] text-[10px] uppercase group relative overflow-hidden">
-                        <span class="relative z-10">INITIATE HANDSHAKE</span>
-                        <div
-                            class="absolute inset-0 bg-gradient-to-r from-transparent via-white/10 to-transparent -translate-x-full group-hover:translate-x-full transition-transform duration-1000">
-                        </div>
+                    <button type="submit" id="login-btn"
+                        class="w-full btn-orange py-6 rounded-2xl font-black tracking-[0.4em] text-xs uppercase shadow-2xl">
+                        Initiate Handshake
                     </button>
                 </div>
             </form>
 
-            <div class="mt-12 text-center">
-                <a href="index.html"
-                    class="text-[9px] font-bold text-slate-600 hover:text-brand tracking-[0.3em] uppercase transition-colors inline-flex items-center gap-3">
-                    <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
-                            d="M10 19l-7-7m0 0l7-7m-7 7h18" />
-                    </svg>
-                    ABORT MODULE
-                </a>
+            <div class="text-center">
+                <p class="text-[8px] font-black text-slate-700 uppercase tracking-[0.4em]">Proprietary Maritime
+                    Encryption Active</p>
             </div>
         </div>
     </div>
 
-    <!-- Security Overlay Decor -->
-    <div class="fixed inset-0 pointer-events-none border-[60px] border-slate-900/40 opacity-20"></div>
-    <div
-        class="fixed top-20 left-20 text-[8px] font-mono text-slate-700 tracking-[0.5em] uppercase vertical-text hidden lg:block opacity-40">
-        ENCRYPTION // RSA-4096 // ACTIVE TRANSACTION LOGGING
-    </div>
-
     <script>
-        // GSAP Entrance
         window.addEventListener('load', () => {
-            gsap.from("#logo-section", { opacity: 0, scale: 0.9, duration: 1.2, ease: "power4.out" });
-            gsap.from("#login-card", { opacity: 0, y: 50, duration: 1.5, ease: "power4.out", delay: 0.3 });
-            gsap.from(".vertical-text", { opacity: 0, x: -20, duration: 2, ease: "power2.out", delay: 1 });
+            gsap.to(".reveal-up", { opacity: 1, y: 0, duration: 1.5, ease: "expo.out" });
         });
 
-        document.getElementById('adminForm').addEventListener('submit', function (e) {
+        function handleLogin(e) {
             e.preventDefault();
-            const id = document.getElementById('adminId').value.trim().toLowerCase();
-            const btn = document.getElementById('auth-btn');
-
-            btn.innerHTML = `<span class="flex items-center justify-center gap-3">
-                <svg class="animate-spin h-4 w-4 text-white" fill="none" viewBox="0 0 24 24"><circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle><path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg>
-                VERIFYING...
-            </span>`;
-            btn.disabled = true;
+            const btn = document.getElementById('login-btn');
+            btn.innerHTML = '<span class="flex items-center justify-center gap-3">Syncing... <div class="w-4 h-4 border-2 border-white/20 border-t-white rounded-full animate-spin"></div></span>';
 
             setTimeout(() => {
-                if (id === 'admin' || id === 'admin@cktravels.com') {
-                    const userData = {
-                        name: 'System Admin',
-                        role: 'admin',
-                        session: Date.now()
-                    };
-                    localStorage.setItem('ck_travels_user', JSON.stringify(userData));
-                    window.location.href = './admin-dashboard.html';
-                } else {
-                    alert('ACCESS DENIED: STATION ID UNRECOGNIZED');
-                    btn.innerHTML = "INITIATE HANDSHAKE";
-                    btn.disabled = false;
-                }
-            }, 2000);
-        });
+                window.location.href = 'admin-dashboard.html';
+            }, 1200);
+        }
     </script>
-</body>
 </body>
 
 </html>
