--- a/admin-login.html
+++ b/admin-login.html
@@ -8,54 +8,75 @@
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- GSAP for Micro-interactions -->
+    <!-- GSAP Master Stack -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+
+    <!-- Design System -->
+    <link rel="stylesheet" href="css/main.css">
 
     <style>
+        /* Glassmorphism 2.0 Panel */
         .glass-panel {
             background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(25px);
+            backdrop-filter: blur(30px);
+            -webkit-backdrop-filter: blur(30px);
             border: 1px solid rgba(255, 255, 255, 0.05);
-            box-shadow: 0 50px 100px -20px rgba(0, 0, 0, 0.6);
+            box-shadow: 0 60px 120px -20px rgba(0, 0, 0, 0.6),
+                0 0 0 1px rgba(255, 255, 255, 0.03) inset;
         }
 
         .input-dark {
             background: rgba(255, 255, 255, 0.02);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.08);
             color: white;
-            transition: all 0.3s ease;
+            transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+        }
+
+        .input-dark::placeholder {
+            color: rgba(255, 255, 255, 0.15);
         }
 
         .input-dark:focus {
             border-color: #FF6B00;
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(255, 107, 0, 0.03);
             outline: none;
-            box-shadow: 0 0 20px rgba(255, 107, 0, 0.2);
+            box-shadow: 0 0 30px rgba(255, 107, 0, 0.15);
         }
 
         .btn-orange {
             background: #FF6B00;
             color: white;
-            transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+            transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
         }
 
         .btn-orange:hover {
-            transform: scale(1.02);
-            box-shadow: 0 0 30px rgba(255, 107, 0, 0.4);
+            transform: translateY(-2px);
+            box-shadow: 0 0 40px rgba(255, 107, 0, 0.5);
         }
 
-        /* Thematic Background */
+        .magnetic-wrap {
+            display: inline-block;
+        }
+
+        /* Float Label Animation */
+        .float-label {
+            transition: all 0.3s cubic-bezier(0.16, 1, 0.3, 1);
+        }
+
         .bg-nautical {
-            background: radial-gradient(circle at 50% 50%, #00143D 0%, #000000 100%);
+            background: radial-gradient(ellipse at 50% 30%, rgba(0, 40, 120, 0.3) 0%, transparent 50%),
+                radial-gradient(circle at 50% 50%, #00143D 0%, #000000 100%);
         }
 
+        /* Radar Scan */
         .radar-scan {
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 400px;
-            height: 400px;
-            background: conic-gradient(from 0deg, rgba(255, 107, 0, 0) 0%, rgba(255, 107, 0, 0.1) 100%);
+            width: 500px;
+            height: 500px;
+            background: conic-gradient(from 0deg, rgba(255, 107, 0, 0) 0%, rgba(255, 107, 0, 0.08) 100%);
             border-radius: 50%;
             transform: translate(-50%, -50%);
             animation: radar 4s linear infinite;
@@ -70,67 +91,167 @@
                 transform: translate(-50%, -50%) rotate(360deg);
             }
         }
+
+        .radar-ring {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 200px;
+            height: 200px;
+            border: 1px solid rgba(255, 107, 0, 0.06);
+            border-radius: 50%;
+            margin-left: -100px;
+            margin-top: -100px;
+        }
+
+        /* Page Transition Curtain */
+        #page-curtain {
+            position: fixed;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background-color: #FF6B00;
+            z-index: 9999;
+            pointer-events: none;
+        }
     </style>
 </head>
 
 <body
-    class="bg-nautical h-screen w-full flex items-center justify-center overflow-hidden font-sans antialiased text-white">
+    class="bg-nautical h-screen w-full flex items-center justify-center overflow-hidden font-body antialiased text-white relative">
 
+    <!-- Page Transition Curtain -->
+    <div id="page-curtain"></div>
+
+    <!-- Background Effects -->
     <div class="radar-scan"></div>
+    <div class="radar-ring" style="width:400px;height:400px;margin-left:-200px;margin-top:-200px;"></div>
+    <div class="radar-ring" style="width:600px;height:600px;margin-left:-300px;margin-top:-300px;"></div>
 
+    <!-- Login Card -->
     <div class="relative z-10 w-full max-w-lg px-8">
-        <div class="glass-panel p-16 rounded-[48px] space-y-12 reveal-up opacity-0">
+        <div class="glass-panel p-14 md:p-16 rounded-[48px] space-y-10" id="admin-login-card">
+
             <div class="text-center space-y-4">
-                <span class="text-[10px] font-black tracking-[0.6em] text-orange-500 uppercase">Secure Command
+                <span class="text-[10px] font-black tracking-[0.6em] text-[#FF6B00] uppercase">Secure Command
                     Interface</span>
-                <h1 class="text-4xl font-black italic tracking-tighter">Officer <span
-                        class="not-italic text-slate-500">Access_</span></h1>
+                <h1 class="text-4xl font-heading font-black italic">Officer <span
+                        class="not-italic text-white/20">Access_</span></h1>
             </div>
 
             <form class="space-y-8" onsubmit="handleLogin(event)">
                 <div class="space-y-6">
-                    <div class="space-y-2">
-                        <label class="text-[9px] font-black text-slate-500 uppercase tracking-widest ml-4">Station
+                    <div class="space-y-2 field-group">
+                        <label
+                            class="float-label text-[9px] font-black text-white/20 uppercase tracking-widest ml-4 transition-all duration-300">Station
                             ID</label>
                         <input type="text" placeholder="STN-2026-X"
-                            class="w-full px-8 py-5 rounded-2xl input-dark font-mono text-sm uppercase tracking-widest placeholder:opacity-30">
+                            class="admin-input w-full px-8 py-5 rounded-2xl input-dark font-mono text-sm uppercase tracking-widest">
                     </div>
-                    <div class="space-y-2">
-                        <label class="text-[9px] font-black text-slate-500 uppercase tracking-widest ml-4">Access
+                    <div class="space-y-2 field-group">
+                        <label
+                            class="float-label text-[9px] font-black text-white/20 uppercase tracking-widest ml-4 transition-all duration-300">Access
                             Protocol</label>
                         <input type="password" placeholder="••••••••"
-                            class="w-full px-8 py-5 rounded-2xl input-dark font-mono text-sm tracking-widest placeholder:opacity-30">
+                            class="admin-input w-full px-8 py-5 rounded-2xl input-dark font-mono text-sm tracking-widest">
                     </div>
                 </div>
 
-                <div class="pt-6">
+                <div class="pt-4 magnetic-wrap w-full">
                     <button type="submit" id="login-btn"
-                        class="w-full btn-orange py-6 rounded-2xl font-black tracking-[0.4em] text-xs uppercase shadow-2xl">
+                        class="magnetic-btn w-full btn-orange py-6 rounded-2xl font-black tracking-[0.4em] text-xs uppercase shadow-2xl shadow-[#FF6B00]/20">
                         Initiate Handshake
                     </button>
                 </div>
             </form>
 
             <div class="text-center">
-                <p class="text-[8px] font-black text-slate-700 uppercase tracking-[0.4em]">Proprietary Maritime
+                <p class="text-[8px] font-black text-white/10 uppercase tracking-[0.4em]">Proprietary Maritime
                     Encryption Active</p>
             </div>
         </div>
     </div>
 
     <script>
+        // =========================================
+        //  CK TRAVELS — ADMIN LOGIN MOTION v10
+        // =========================================
+
         window.addEventListener('load', () => {
-            gsap.to(".reveal-up", { opacity: 1, y: 0, duration: 1.5, ease: "expo.out" });
+            // Cinematic card entry with back.out bounce
+            gsap.from('#admin-login-card', {
+                scale: 0.8,
+                opacity: 0,
+                y: 60,
+                duration: 1.2,
+                ease: 'back.out(1.7)'
+            });
+
+            // Stagger children
+            gsap.from('#admin-login-card > *', {
+                opacity: 0, y: 15, stagger: 0.1,
+                duration: 0.8, ease: 'power3.out', delay: 0.5
+            });
+
+            // Init magnetic buttons
+            initMagneticButtons();
+        });
+
+        // Interactive field labels — pop up & orange on focus
+        document.querySelectorAll('.admin-input').forEach(input => {
+            input.addEventListener('focus', function () {
+                const group = this.closest('.field-group');
+                if (!group) return;
+                const label = group.querySelector('.float-label');
+                if (label) gsap.to(label, { color: '#FF6B00', y: -4, scale: 1.05, duration: 0.3 });
+            });
+            input.addEventListener('blur', function () {
+                const group = this.closest('.field-group');
+                if (!group) return;
+                const label = group.querySelector('.float-label');
+                if (label) gsap.to(label, { color: 'rgba(255,255,255,0.2)', y: 0, scale: 1, duration: 0.3 });
+            });
         });
 
         function handleLogin(e) {
             e.preventDefault();
             const btn = document.getElementById('login-btn');
+
+            gsap.to(btn, { scale: 0.95, duration: 0.15 });
             btn.innerHTML = '<span class="flex items-center justify-center gap-3">Syncing... <div class="w-4 h-4 border-2 border-white/20 border-t-white rounded-full animate-spin"></div></span>';
+            btn.disabled = true;
 
             setTimeout(() => {
-                window.location.href = 'admin-dashboard.html';
+                gsap.to('#admin-login-card', {
+                    scale: 0.9, opacity: 0, y: -30, duration: 0.8, ease: "power2.in",
+                    onComplete: () => { navigateWithCurtain('admin-dashboard.html'); }
+                });
             }, 1200);
+        }
+
+        // === REUSABLE FUNCTIONS ===
+        function navigateWithCurtain(href) {
+            gsap.to("#page-curtain", {
+                left: 0, duration: 0.8, ease: "expo.inOut",
+                onComplete: () => { window.location.href = href; }
+            });
+        }
+
+        function initMagneticButtons() {
+            document.querySelectorAll('.magnetic-wrap').forEach(wrap => {
+                const btn = wrap.querySelector('.magnetic-btn');
+                if (!btn) return;
+                wrap.addEventListener('mousemove', (e) => {
+                    const rect = wrap.getBoundingClientRect();
+                    const x = e.clientX - rect.left - rect.width / 2;
+                    const y = e.clientY - rect.top - rect.height / 2;
+                    gsap.to(btn, { x: x * 0.4, y: y * 0.4, duration: 0.4, ease: "power2.out" });
+                });
+                wrap.addEventListener('mouseleave', () => {
+                    gsap.to(btn, { x: 0, y: 0, duration: 0.6, ease: "elastic.out(1, 0.3)" });
+                });
+            });
         }
     </script>
 </body>
