--- a/dashboard.html
+++ b/dashboard.html
@@ -64,26 +64,31 @@
     <!-- Page Transition Curtain -->
     <div id="page-curtain"></div>
 
-    <!-- Nav Dock -->
+    <!-- Navigation -->
     <nav id="main-nav"
-        class="fixed top-8 left-1/2 -translate-x-1/2 w-[90%] max-w-7xl z-50 px-10 py-5 rounded-[40px] transition-all duration-700 glass-2 hidden lg:flex items-center justify-between">
-        <a href="index.html" class="flex items-center gap-1 group">
-            <span class="text-3xl font-black tracking-tighter italic text-white">CK<span
-                    class="text-[#FF6B00] not-italic">.</span></span>
-        </a>
+        class="fixed top-0 w-full z-50 px-6 py-4 flex items-center justify-between transition-all duration-700 opacity-0 -translate-y-[100px]">
+        <div id="nav-container"
+            class="max-w-7xl mx-auto w-full flex items-center justify-between px-10 py-5 rounded-[40px] transition-all duration-500">
+            <a href="index.html" class="flex items-center gap-1 group">
+                <span
+                    class="text-3xl font-black tracking-tighter italic text-midnight group-hover:text-orange-600 transition-colors">CK<span
+                        class="text-orange-600 not-italic">.</span></span>
+            </a>
 
-        <div class="flex items-center gap-12 font-bold text-[11px] tracking-[0.3em] uppercase opacity-60">
-            <a href="index.html" class="hover:text-[#FF6B00] transition-colors">Home</a>
-            <a href="flights.html" class="hover:text-[#FF6B00] transition-colors">Flights</a>
-            <a href="packages.html" class="hover:text-[#FF6B00] transition-colors">Packages</a>
-            <a href="booking.html" class="text-[#FF6B00]">My Trips</a>
-        </div>
+            <div class="hidden lg:flex items-center gap-12 font-bold text-[11px] tracking-[0.3em] uppercase opacity-60">
+                <a href="index.html" class="hover:text-orange-600 transition-colors">Home</a>
+                <a href="flights.html" class="hover:text-orange-600 transition-colors">Flights</a>
+                <a href="packages.html" class="hover:text-orange-600 transition-colors">Packages</a>
+                <a href="booking.html" class="text-orange-600">My Trips</a>
+            </div>
 
-        <div class="flex items-center gap-6">
-            <a href="login.html" class="text-[11px] font-black tracking-[0.3em] uppercase text-white">Member Link</a>
-            <a href="flights.html"
-                class="bg-[#FF6B00] text-white px-8 py-4 rounded-full text-[11px] font-black tracking-[0.3em] transition-all hover:scale-105 active:scale-95 shadow-xl uppercase">Book
-                Now</a>
+            <div class="flex items-center gap-6">
+                <a href="login.html" class="text-[11px] font-black tracking-[0.3em] uppercase text-midnight">Member
+                    Link</a>
+                <a href="flights.html"
+                    class="bg-orange-600 text-white px-8 py-4 rounded-full text-[11px] font-black tracking-[0.3em] uppercase transition-all hover:scale-105 active:scale-95 shadow-xl">Book
+                    Now</a>
+            </div>
         </div>
     </nav>
 
@@ -130,7 +135,8 @@
         <main class="flex-1 space-y-20 reveal-up">
             <header class="space-y-6">
                 <h1 class="text-6xl md:text-[80px] font-heading font-black italic text-[#00143D] leading-[0.9]">Member
-                    <span class="not-italic text-slate-200">Portal.</span></h1>
+                    <span class="not-italic text-slate-200">Portal.</span>
+                </h1>
                 <p class="text-xl text-slate-400 font-medium italic">Synchronizing assets. Welcome back, Johnathan.</p>
             </header>
 
@@ -258,8 +264,45 @@
             gsap.from(".reveal-left", { x: -30, opacity: 0, duration: 1.2, ease: "power4.out", delay: 0.2 });
             gsap.from(".stat-card", { opacity: 0, scale: 0.9, stagger: 0.1, duration: 1, ease: "back.out(1.7)", delay: 0.5 });
 
+            // Navbar Entrance
+            gsap.to("#main-nav", {
+                y: 0,
+                opacity: 1,
+                duration: 1.2,
+                ease: "expo.out"
+            });
+
             // Curtain Entry
             gsap.to("#page-curtain", { left: "-100%", duration: 1.2, ease: "expo.inOut" });
+
+            // Navbar Scroll Transformation
+            ScrollTrigger.create({
+                start: "top -50",
+                onEnter: () => {
+                    gsap.to("#nav-container", {
+                        backgroundColor: "rgba(255, 255, 255, 0.1)",
+                        backdropFilter: "blur(25px)",
+                        border: "1px solid rgba(255, 255, 255, 0.1)",
+                        boxShadow: "0 20px 40px rgba(0,0,0,0.1)",
+                        padding: "16px 40px",
+                        marginTop: "16px",
+                        duration: 0.5,
+                        ease: "power2.out"
+                    });
+                },
+                onLeaveBack: () => {
+                    gsap.to("#nav-container", {
+                        backgroundColor: "transparent",
+                        backdropFilter: "blur(0px)",
+                        border: "1px solid transparent",
+                        boxShadow: "none",
+                        padding: "20px 0px",
+                        marginTop: "0px",
+                        duration: 0.5,
+                        ease: "power2.out"
+                    });
+                }
+            });
 
             // Exit Hijack bank to Home
             document.querySelectorAll('a[href="index.html"]').forEach(link => {
