--- a/flights.html
+++ b/flights.html
@@ -85,6 +85,10 @@
             backdrop-filter: blur(20px);
             border-top: 1px solid rgba(255, 255, 255, 0.1);
         }
+
+        .magnetic-wrap {
+            display: inline-block;
+        }
     </style>
 </head>
 
@@ -93,27 +97,33 @@
     <!-- Page Transition Curtain -->
     <div id="page-curtain"></div>
 
-    <!-- Desktop Nav Dock -->
-    <nav id="main-nav"
-        class="fixed top-8 left-1/2 -translate-x-1/2 w-[90%] max-w-7xl z-50 px-10 py-5 rounded-[40px] transition-all duration-700 glass-2 hidden lg:flex items-center justify-between">
-        <a href="index.html" class="flex items-center gap-1 group">
-            <span class="text-3xl font-black tracking-tighter italic text-[#00143D]">CK<span
-                    class="text-[#FF6B00] not-italic">.</span></span>
-        </a>
+    <!-- Navigation -->
+    <nav id="main-nav" class="fixed top-0 w-full z-50 transition-all duration-700"
+        style="opacity:0; transform: translateY(-100px);">
+        <div id="nav-container"
+            class="max-w-7xl mx-auto w-full flex items-center justify-between px-10 py-5 rounded-[40px] transition-all duration-500">
+            <a href="index.html" class="flex items-center gap-1 group page-link">
+                <span id="logo-span"
+                    class="text-3xl font-black tracking-tighter italic text-white group-hover:text-[#FF6B00] transition-colors">CK<span
+                        class="text-[#FF6B00] not-italic">.</span></span>
+            </a>
 
-        <div class="flex items-center gap-12 font-bold text-[11px] tracking-[0.3em] uppercase opacity-60">
-            <a href="index.html" class="hover:text-[#FF6B00] transition-colors">Home</a>
-            <a href="flights.html" class="text-[#FF6B00]">Flights</a>
-            <a href="packages.html" class="hover:text-[#FF6B00] transition-colors">Packages</a>
-            <a href="booking.html" class="hover:text-[#FF6B00] transition-colors">My Trips</a>
-        </div>
+            <div class="hidden lg:flex items-center gap-12 font-bold text-[11px] tracking-[0.3em] uppercase">
+                <a href="index.html"
+                    class="nav-link-text text-white/60 hover:text-[#FF6B00] transition-colors page-link">Home</a>
+                <a href="flights.html" class="nav-link-text text-[#FF6B00]">Flights</a>
+                <a href="packages.html"
+                    class="nav-link-text text-white/60 hover:text-[#FF6B00] transition-colors page-link">Packages</a>
+                <a href="booking.html"
+                    class="nav-link-text text-white/60 hover:text-[#FF6B00] transition-colors page-link">My Trips</a>
+            </div>
 
-        <div class="flex items-center gap-6">
-            <a href="login.html" class="text-[11px] font-black tracking-[0.3em] uppercase text-[#00143D]">Member
-                Link</a>
-            <a href="flights.html"
-                class="btn-orange px-8 py-4 rounded-full text-[11px] font-black tracking-[0.3em] uppercase transition-all shadow-xl">Book
-                Now</a>
+            <div class="flex items-center gap-6">
+                <div class="magnetic-wrap">
+                    <a href="login.html"
+                        class="magnetic-btn btn-orange px-10 py-4 rounded-full text-[11px] font-black tracking-[0.3em] uppercase shadow-xl page-link">Login</a>
+                </div>
+            </div>
         </div>
     </nav>
 
@@ -368,19 +378,72 @@
             gsap.from(".reveal-up", { y: 40, opacity: 0, duration: 1.2, ease: "power4.out" });
             gsap.from(".reveal-left", { x: -30, opacity: 0, duration: 1.2, ease: "power4.out", delay: 0.2 });
 
+            // Navbar Entrance — slide from top
+            gsap.from("#main-nav", {
+                y: -100, opacity: 0, duration: 1.2, ease: "expo.out",
+                onStart: () => {
+                    document.getElementById('main-nav').style.opacity = '1';
+                    document.getElementById('main-nav').style.transform = 'translateY(0)';
+                }
+            });
+
             // Handle Entrance Curtain
             gsap.to("#page-curtain", { left: "-100%", duration: 1.2, ease: "expo.inOut" });
 
-            // Exit Hijack back to Home
-            document.querySelectorAll('a[href="index.html"]').forEach(link => {
+            // Navbar Scroll Transformation (Deep Blue Glassmorphic Dock)
+            ScrollTrigger.create({
+                start: "top -50",
+                onEnter: () => {
+                    gsap.to("#nav-container", {
+                        backgroundColor: "rgba(0, 20, 61, 0.85)",
+                        backdropFilter: "blur(25px)",
+                        borderBottom: "2px solid #FF6B00",
+                        boxShadow: "0 20px 60px rgba(0,0,0,0.3)",
+                        padding: "12px 40px",
+                        marginTop: "12px",
+                        duration: 0.5,
+                        ease: "power2.out"
+                    });
+                },
+                onLeaveBack: () => {
+                    gsap.to("#nav-container", {
+                        backgroundColor: "transparent",
+                        backdropFilter: "blur(0px)",
+                        borderBottom: "2px solid transparent",
+                        boxShadow: "none",
+                        padding: "20px 40px",
+                        marginTop: "0px",
+                        duration: 0.5,
+                        ease: "power2.out"
+                    });
+                }
+            });
+
+            // Page Curtain on ALL internal links
+            document.querySelectorAll('a.page-link').forEach(link => {
                 link.addEventListener('click', (e) => {
+                    const href = link.getAttribute('href');
+                    if (!href || href === '#' || href.startsWith('javascript')) return;
                     e.preventDefault();
                     gsap.to("#page-curtain", {
-                        left: 0,
-                        duration: 1,
-                        ease: "expo.inOut",
-                        onComplete: () => window.location.href = "index.html"
+                        left: 0, duration: 0.8, ease: "expo.inOut",
+                        onComplete: () => { window.location.href = href; }
                     });
+                });
+            });
+
+            // Magnetic Mouse Effect
+            document.querySelectorAll('.magnetic-wrap').forEach(wrap => {
+                const btn = wrap.querySelector('.magnetic-btn');
+                if (!btn) return;
+                wrap.addEventListener('mousemove', (e) => {
+                    const rect = wrap.getBoundingClientRect();
+                    const x = e.clientX - rect.left - rect.width / 2;
+                    const y = e.clientY - rect.top - rect.height / 2;
+                    gsap.to(btn, { x: x * 0.4, y: y * 0.4, duration: 0.4, ease: "power2.out" });
+                });
+                wrap.addEventListener('mouseleave', () => {
+                    gsap.to(btn, { x: 0, y: 0, duration: 0.6, ease: "elastic.out(1, 0.3)" });
                 });
             });
         });
